trunk/Archive2/95/9f2009eebed89b/output
main.cpp:7:3: error: no matching function for call to 'round'
  round( 2.5, 42 ); // *** error: no implicit conversion from 'int' to 'round_mode'
  ^~~~~
main.cpp:3:8: note: candidate function not viable: no known conversion from 'int' to 'round_mode' for 2nd argument
double round( double , round_mode = round_half_up ) ;
       ^
1 error generated.
main.cpp: In function 'int main()':
main.cpp:7:18: error: invalid conversion from 'int' to 'round_mode' [-fpermissive]
   round( 2.5, 42 ); // *** error: no implicit conversion from 'int' to 'round_mode'
                  ^
